Multipart/alternative (with Lightning): Out of 3 alternative parts, TB does not display nor offer as attachment any of (1) text/plain or (2) text/html, but only (3) text/calendar (mail with invite from google calendar)
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr91+ fixed, thunderbird92 affected)
People
(Reporter: giunta.gaetano, Assigned: mkmelin)
References
(Blocks 1 open bug)
Details
(Keywords: testcase)
Attachments
(4 files)
Comment 1•13 years ago
|
||
Updated•13 years ago
|
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Updated•13 years ago
|
Comment 5•13 years ago
|
||
| Reporter | ||
Comment 6•13 years ago
|
||
| Reporter | ||
Comment 7•13 years ago
|
||
| Reporter | ||
Comment 8•13 years ago
|
||
| Reporter | ||
Comment 9•13 years ago
|
||
Comment 10•13 years ago
|
||
Updated•13 years ago
|
Updated•13 years ago
|
Comment 11•13 years ago
|
||
Updated•13 years ago
|
Comment 12•13 years ago
|
||
Updated•13 years ago
|
Comment 13•13 years ago
|
||
Comment 14•13 years ago
|
||
Updated•9 years ago
|
Comment 17•4 years ago
|
||
Let's get this straight:
Bug 505024: In an multipart/alternative message, the text/calendar part isn't shown unless Lightning is installed.
Bug 760412: In an multipart/alternative message, the text/html part isn't shown if Lightning is installed. Different issue.
Since TB78 Lightning is always "installed" (integrated into TB), so bug 505024 has been resolved and bug 760412 permanently becomes an issue.
Updated•4 years ago
|
Comment 21•4 years ago
|
||
There used to be this add-on to always show the text/calendar part:
https://addons.thunderbird.net/en-US/thunderbird/addon/sfoa/
Comment 22•4 years ago
|
||
I think this is the correct issue for us to continue on. Interestingly, I saved the .eml for two different effected emails, removed the entire text/calendar section and opened it again and they now display the text/html version as well as the attached .ics file. Seems like if there is a way to prefer the text/html OR ignore the text/calendar version, it would resolve this bug.
Comment 23•4 years ago
|
||
Please read the RFC: https://www.w3.org/Protocols/rfc1341/7_2_Multipart.html
The multipart/alternative type is syntactically identical to multipart/mixed, but the semantics are different. In particular, each of the parts is an "alternative" version of the same information. User agents should recognize that the content of the various parts are interchangeable. The user agent should either choose the "best" type based on the user's environment and preferences, or offer the user the available alternatives. In general, choosing the best type means displaying only the LAST part that can be displayed.
So if the message contains text/html followed by text/calendar, only text/calendar part will be displayed. If the event is also included as a .ics attachment, there is no point to have a text/calendar part with the same information. Microsoft OL clearly infringes the RFC here. That is not to say that TB shouldn't handle the case better.
Comment 24•4 years ago
|
||
To be honest, I'm not a web-person to this detail, just an avid user for many years who wants Thunderbird to keep going strongly. The emails are from Google Calendar, which is also a large user base, so I wouldn't want this to be the cause of lost users. Happy to continue to test/report back/etc. to help with this issue.
Comment 25•4 years ago
|
||
Sorry, I re-read bug 1725690 comment #0 now, it's not Microsoft, but Google. I thought that Google didn't put any content into the HTML part, but for updated events, that's apparently not the case. The bug has been on file since 2012. You'll have to see whether the TB team prioritizes it. Sadly, only showing one MIME part is deeply buried in 20+ y/o MIME code that no one wants to touch.
Comment 26•4 years ago
|
||
Hopefully it can be addressed at some point soon. It is certainly a bother for those imporant event update emails.
Comment 27•4 years ago
|
||
Comment 28•4 years ago
|
||
Does this mean it will get into Thunderbird?
Comment 29•4 years ago
|
||
I can confirm that the fix noted for Betterbird in comment 27 works. Betterbird displays the text/HTML and then the ics context (assuming due to inline attachments).
| Assignee | ||
Comment 31•4 years ago
|
||
This makes us always show the generated invite html together with the normal html part.
Invites usually have an ok display in there generated by the server or sending client, and I think we don't want to normally show both parts at the same time. This patch changes the imip invite to just show an expandable summary on top of the html from the email. By clicking the arrow the details (like we had them) will be displayed, so that it still is accessible for the cases where the html representation is not there in the email, or it's bad.
Displaying the normal html content of the email solves problems expecially for "cancelled with a note" updates where you otherwise can't see the note because it's only inside the mail content.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 33•4 years ago
|
||
I'm happy to test out this patch if there is an easy way to.
Comment 34•4 years ago
|
||
I'd be happy to test this too - Happy to see this getting fixed [I have been waiting for this fix for years now! https://bugzilla.mozilla.org/show_bug.cgi?id=1581070]
Comment 35•4 years ago
|
||
I took the latest nightly build [https://ftp.mozilla.org/pub/thunderbird/nightly/2021/08/2021-08-30-10-47-50-comm-central/thunderbird-93.0a1.en-US.mac.dmg]
I still see the issue that I reported in the original bug I filed [1581070 ].
I am not sure if the fix is supposed to be present in 30Aug nightly this build?
| Assignee | ||
Comment 36•4 years ago
|
||
It's not yet fixed. I need to adjust some tests before getting it landed.
Comment 37•4 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/565fc4b596ea
Always display text/calendar part along with chosen text/html part. r=darktrojan
| Assignee | ||
Comment 38•4 years ago
|
||
I think we eventually want to uplift to 91, since there's so cases where it's needed to get the information someone sent you.
Comment 39•4 years ago
|
||
I confirm this is fixed in the nightly build: 93.0a1 (2021-09-01) (64-bit)
@Magnus - thank you so much for getting this resolved.
Comment 40•4 years ago
|
||
After this change, this CSS selector is unused https://searchfox.org/comm-central/rev/88d88aa4086176def5c63925b9d727b593ec6b99/calendar/base/themes/common/imip.css#28-34 . It used to be used for the imipHtml-header, which was the table <caption class="header">, but is now a <summary>. Can you clean it up?
| Assignee | ||
Comment 41•4 years ago
|
||
Comment 42•4 years ago
|
||
Confirming that 93.0a1 is working properly for these emails from Google Calendar this morning. Very excited for this to be pushed to the regular release. Thank you all for your hard work and attention to this long existing bug!
Comment 43•4 years ago
|
||
Comment 44•4 years ago
|
||
Comment on attachment 9237555 [details]
Bug 760412 - Always display text/calendar part along with chosen text/html part. r=darktrojan
[Approval Request Comment]
To show missing information from invites. Landed in 93 milestone.
Comment 45•4 years ago
|
||
Comment on attachment 9237555 [details]
Bug 760412 - Always display text/calendar part along with chosen text/html part. r=darktrojan
[Triage Comment]
Approved for esr91
(it also has tests)
Comment 46•4 years ago
|
||
| bugherder uplift | ||
Comment 50•4 years ago
|
||
Does this patch has the following side effect/regression?
https://thunderbird.topicbox.com/groups/enterprise/T0661b5915a2d00e8-M43050dbf43c83726521bb141/expand-calendar-event-details-by-default
| Assignee | ||
Comment 51•4 years ago
|
||
It's expected yes.
Comment 52•4 years ago
|
||
I've run into that as well, and I agree with Richard that this UI is unfortunate. I've filed https://bugzilla.mozilla.org/show_bug.cgi?id=1742101
Description
•